update env example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,14 @@
 # Environment & Application Settings
-NODE_ENV="development"                          # development, stagging or production
+# NODE_ENV="production"
+NODE_ENV="development"
 
 # General Server Configurations
 PORT="3000"
-CORS_ORIGIN="CORS_ORIGIN"
+CORS_ORIGIN="*"
 
 # JWT Authentication
 JWT_SECRET="YOUR_JWT_SECRET_KEY"
 
 # MONGODB Configuration
-MONGODB_LOCAL_ENDPOINT="YOUR_MONGODB_URI"
+MONGO_DB_URI="YOUR_MONGODB_URI"
+DB_NAME="YOUR_DATABASE_NAME"
