--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "pro": "cross-env NODE_ENV=production nodemon index.js"
+    "dev": " nodemon index.js",
+    "pro": "nodemon index.js"
   },
   "repository": {
     "type": "git",
