--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
