--- a/backend/package.json
+++ b/backend/package.json
@@ -34,17 +34,19 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.6.0",
+    "dotenv": "^16.6.1",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10"
